--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
     <section id="section-home" class="section">
-      <div id="home-carousel" class="carousel slide carousel-fade">
+      <div id="home-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button
             type="button"
@@ -75,7 +75,7 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active" data-bs-interval="10000">
             <img
               src="assets/images/featured-1.jpeg"
               class="d-block w-100"
@@ -102,7 +102,7 @@
               </button>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-bs-interval="10000">
             <img
               src="assets/images/featured-2.jpeg"
               class="d-block w-100"
@@ -128,7 +128,7 @@
               </button>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-bs-interval="10000">
             <img
               src="assets/images/featured-3.jpeg"
               class="d-block w-100"
